# vkCelShadingRenderEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  saba.cpp  sabaMiddleWare.cpp
pch/: AutoIndexedContainer.h  Ecs.h  (+11 more)
renderer/: CMakeLists.txt
renderer/Engine/: Engine.cpp  Engine.h
renderer/Engine/Core/DispatchSystem/: EventHandle.cpp  EventHandle.h  SystemHub.cpp  SystemHub.h
renderer/Engine/Core/Management/: IndexManager.cpp  IndexManager.h
renderer/Engine/ECS/: Ecs.cpp  Ecs.h
renderer/Engine/ECS/Camera/: Camera.h
renderer/Engine/ECS/Model/: common_device.cu  common_device.cuh
renderer/Engine/ECS/Scene/: SceneManager.cpp  SceneManager.h
renderer/Engine/ECS/System/: AsyncLoadSystem.cpp  AsyncLoadSystem.h  InspectorPanel.cpp  InspectorPanel.h  RenderLibrary.cpp  RenderLibrary.h  RenderSubmissionSystem.cpp  RenderSubmissionSystem.h
renderer/Engine/Editor/: ImGui.cpp  ImGui.h  ImGui.ini  ImGuiHub.cpp  ImGuiHub.h  Window.cpp  Window.h
renderer/Engine/Editor/ShaderHotReload/: ShaderEditor.cpp  ShaderEditor.h  ShaderHotReload.cpp  ShaderHotReload.h
renderer/Engine/Editor/Widget/: ConsoleWidget.cpp  ConsoleWidget.h  PanelWidget.cpp  PanelWidget.h  RenderWidget.cpp  RenderWidget.h  ViewWidget.cpp  ViewWidget.h  Widget.h
renderer/Engine/RHI/: Allocator.cpp  Allocator.h  Buffer.cpp  Buffer.h  Command.cpp  Command.h  Common.h  Descriptor.cpp  Descriptor.h  DescriptorSystem.cpp  DescriptorSystem.h  Image.cpp  Image.h  QueueFamily.cpp  QueueFamily.h  Rhi.cpp  Rhi.h  Swapchain.cpp  Swapchain.h  TimelineSemaphore.cpp  TimelineSemaphore.h  VkInit.cpp  VkInit.h
renderer/Engine/RHI/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  RayTracingPipeline.cpp  RayTracingPipeline.h
renderer/Engine/RS/: ResourceSystem.cpp  ResourceSystem.h
renderer/Engine/RS/Load/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssimpLoader.cpp  AssimpLoader.h  Audio.cpp  Audio.h  Loader.cpp  Loader.h  Memory.cpp  Memory.h  MmdLoader.cpp  MmdLoader.h  Node.h
renderer/Engine/SM/: Scene.cpp  Scene.h
renderer/Engine/SM/Atmosphere/: Model.cpp  Model.h  constant.h
renderer/Engine/Utils/: Auxiliary.h  FileOperation.h
renderer/assets/: CMakeLists.txt  CheckShader.cmake
renderer/assets/shaders/: b_rt_hit_buffer_ref.rchit  f_test.frag  host_device.glsl  model_f.frag  model_v.vert  post_f.frag  post_v.vert  raycommon.glsl  rt_gen.rgen  rt_hit.rchit  rt_miss.rmiss  rt_shadow_miss.rmiss  v_test.vert  wavefront.glsl
renderer/assets/shaders/Basic/: basic_f.frag  basic_v.vert
renderer/assets/shaders/PBR/basic/: pbr.glsl
renderer/assets/shaders/RT/: gen.rgen  hit.rchit  shadow_miss.rmiss
renderer/assets/shaders/ShadowMap/: f.frag  v.vert
renderer/resource/: CMakeLists.txt
renderer/resource/shaders/: basic.frag  basic.vert  common.glsl
renderer/resource/shaders/Atmosphere/: volumetric_overcast_clouds.frag  volumetric_overcast_clouds.vert
renderer/resource/shaders/Basic/: model.frag  model.vert  outline.frag  outline.geom  outline.vert  pmx.frag  pmx.vert  post.frag
renderer/resource/shaders/RT/: gen.rgen  hit.rchit  miss.rmiss
renderer/resource/shaders/RT_Reflectivity/: gen.rgen.glsl
renderer/resource/shaders/Test/: skeleton_line.frag  skeleton_line.vert  temp.frag  temp.vert
renderer/resource/shaders_spv/: basic.frag.spv  basic.vert.spv
renderer/resource/shaders_spv/Atmosphere/: volumetric_overcast_clouds.frag.spv  volumetric_overcast_clouds.vert.spv
renderer/resource/shaders_spv/Basic/: model.frag.spv  model.vert.spv  outline.frag.spv  outline.geom.spv  outline.vert.spv  pmx.vert.spv  post.frag.spv  post.vert.spv
renderer/resource/shaders_spv/RT/: gen.rgen.spv  hit.rchit.spv  miss.rmiss.spv
renderer/resource/shaders_spv/Test/: skeleton_line.frag.spv  skeleton_line.vert.spv  temp.frag.spv  temp.vert.spv
renderer/resource/webview/: monaco.html  tex.txt
renderer/src/: Application.cpp  Application.h
renderer/src/Editor/: Editor.cpp  Editor.h
renderer/src/Editor/Gui/: vkImGui.cpp  vkImGui.h
renderer/src/Editor/Gui/Widget/: Widget.cpp  Widget.h  WidgetManager.cpp  WidgetManager.h
renderer/src/Editor/ShaderEditor/: ShaderEditor.cpp  ShaderEditor.h
renderer/src/Editor/UI/Gui/: vkImGui.cpp  vkImGui.h
renderer/src/Engine/: Engine.cpp  Engine.h
renderer/src/Engine/Core/: Engine.cpp  Engine.h  vkWindow.cpp  vkWindow.h
renderer/src/Engine/Core/Callback/: GlfwCallback.h
renderer/src/Engine/Core/DispatchSystem/: Schedulers.h
renderer/src/Engine/Core/Event/: Event.cpp  Event.h  EventTypes.h
renderer/src/Engine/Core/FileOperator/: FileOperation.h  ShaderFolderWatcher.h  ShaderHotReloader.h
renderer/src/Engine/Core/Input/: Command.cpp  Command.h  CommandParser.cpp  CommandParser.h  InputHandlers.cpp  InputHandlers.h
renderer/src/Engine/ECS/: ECSManager.cpp  ECSManager.h
renderer/src/Engine/ECS/Attachment/: Scene.cpp  Scene.h  ShadowMap.cpp  ShadowMap.h
renderer/src/Engine/ECS/Camera/: Camera.cpp  Camera.h  Camera.ixx
renderer/src/Engine/ECS/Model/: LoadModel.cpp  LoadModel.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h  ModelStruct.h  PmxLoader.cpp  PmxLoader.h
renderer/src/Engine/Materials/: Material.h  PBR.cpp  PBR.h
renderer/src/Engine/RHI/: Allocator.cpp  Allocator.h  Command.cpp  Command.h  Descriptor.cpp  Descriptor.h  FrameRender.cpp  FrameRender.h  RT.cpp  RT.h  RTBuilder.cpp  RTBuilder.h  RenderGroup.cpp  RenderGroup.h  RenderProcess.cpp  RenderProcess.h  RenderProcessHandler.cpp  RenderProcessHandler.h  RenderProcessManager.cpp  RenderProcessManager.h  RenderProcessT.cpp  RenderProcessT.h  RenderSession.cpp  RenderSession.h  TimelineSemaphoreManager.cpp  TimelineSemaphoreManager.h  vkAllocator.cpp  vkAllocator.h  vkAsset.cpp  vkAsset.h  vkCommand.cpp  vkCommand.h  vkCommon.h  vkDescriptor.cpp  vkDescriptor.h  vkFrameRender.cpp  vkFrameRender.h  vkInit.cpp  vkInit.h  vkPipeline.cpp  (+12 more)
renderer/src/Engine/RHI/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  RayTracingPipeline.cpp  RayTracingPipeline.h  State.h
renderer/src/Engine/Utils/: Log.cpp  Log.h  ThreadPool.cpp  ThreadPool.h  TypeConcepts.h
(+108 files in other folders)
